option('logging', type: 'feature', value: 'auto',
  description: 'Include logging component')

option('build_programs', type: 'boolean', value: true,
  description: 'Build extra programs')

option('build_tests', type: 'boolean', value: true,
  description: 'Build tests')

option('build_benchmarks', type: 'boolean', value: false,
  description: 'Build benchmarks')
